--- a/open this.html
+++ b/open this.html
@@ -23,9 +23,10 @@
       </center>
         <script>
             alert("Good Evening miss pretty")   
-            alert("I know that I already said this.")
             alert("I like you Miss Julie Ann")
-            alert("I'm asking for your permission to court you.") 
+            alert("Straight to the point ah hahaha")
+            alert("Take the risk or lose the chance na 'to hahaha") 
+            alert("I just want to ask your permission to court you")
             alert("Can I?")          
         </script>
 </body>
