--- a/open this.html
+++ b/open this.html
@@ -23,11 +23,14 @@
       </center>
         <script>
             alert("Good Evening miss pretty")   
-            alert("I like you Miss Julie Ann")
-            alert("Straight to the point ah hahaha")
-            alert("Take the risk or lose the chance na 'to hahaha") 
-            alert("I just want to ask your permission to court you")
-            alert("Can I?")          
+            alert("Before October ends I just want to say")
+            alert("Thankyou, abi ko di mo ako manotice hahaha")
+            alert("Kay ako lang man ja hahaha but you did") 
+            alert("You noticed someone like me and it made me very happy.")
+            alert("Nakilig pa gani ko kang naghuod kaw nga maice cream hahahaha")
+            alert("This my best month so far")
+            alert("So before November starts. I just want to say....")  
+            alert("I like you <33")
         </script>
 </body>
 </html>
