--- a/open this.html
+++ b/open this.html
@@ -31,6 +31,8 @@
             alert("This my best month so far")
             alert("So before November starts. I just want to say....")  
             alert("I like you <33")
+            alert("Your eyes, your smile, your vibe, your style, your mindset")
+            alert("Ganda mo palagi <33")
         </script>
 </body>
 </html>
