--- a/open this.html
+++ b/open this.html
@@ -17,6 +17,7 @@
     <body>
       <center>
                 <img src="https://media.tenor.com/a_t_D2lPn8AAAAAM/kermit-the.gif" height="200px" width="200px;" style="display-block, margin: auto;">
+          Wanna start your November with me?
       </center>
       <center>
         <i>  </i>
