--- a/open this.html
+++ b/open this.html
@@ -17,10 +17,9 @@
     <body>
       <center>
                 <img src="https://media.tenor.com/a_t_D2lPn8AAAAAM/kermit-the.gif" height="200px" width="200px;" style="display-block, margin: auto;">
-          Wanna start your November with me?
       </center>
       <center>
-        <i>  </i>
+        <i> Wanna start your November with me? </i>
       </center>
         <script>
             alert("Good Evening miss pretty")   
